# curiosity_baselines

./: .gitignore  Dockerfile  Dockerfile_gpu  Makefile  README.md  global.json  graph.py  job.yml  launch.py  requirements.txt  run_monkey.py  visualizing.py
extra/: README.md  fetch_env.py  robot.xml
results/ppo_DeepmindOrdealEnv-v0/art/: arguments.json  events.out.tfevents.1652058240.rl-8cpu.24842.0  events.out.tfevents.1652058358.rl-8cpu.25106.0  last_itr.txt  params.json  progress.csv
results/ppo_DeepmindOrdealEnv-v0/art_0/: arguments.json  events.out.tfevents.1652049342.rl-8cpu.10368.0  params.json  progress.csv
results/ppo_DeepmindOrdealEnv-v0/art_15/: arguments.json  last_itr.txt  progress.csv
results/ppo_DeepmindOrdealEnv-v0/art_6/: arguments.json  last_itr.txt  params.json  progress.csv
results/ppo_DeepmindOrdealEnv-v0/art_7/: arguments.json  last_itr.txt  progress.csv
results/ppo_DeepmindOrdealEnv-v0/art_8/: arguments.json  last_itr.txt  params.json  progress.csv
results/ppo_DeepmindOrdealEnv-v0/art_9/: arguments.json  last_itr.txt  params.json  progress.csv
rlpyt/agents/: base.py
rlpyt/agents/pg/: atari.py  (+2 more)
rlpyt/algos/: utils.py
rlpyt/envs/: gym.py
rlpyt/models/: mlp.py  utils.py
rlpyt/models/curiosity/art/: CMakeLists.txt  features_0.txt  main  main.cpp  main.py  module.cpp  setup.py
rlpyt/models/curiosity/art/src/: OnlineFuzzyART.cpp  OnlineFuzzyArt.h  types.h  utils.h
rlpyt/runners/: minibatch_rl.py
rlpyt/samplers/: buffer.py  collections.py  collectors.py
rlpyt/utils/: averages.py  buffer.py
utilities/: text_utils.py
(+175 files in other folders)
